New message in case of exception

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -122,7 +122,7 @@
         .then(response => {
             if (!response.ok) {
                 if (response.status === 500) {
-                    throw new Error('Server error occurred (500). Please try again later or contact an administrator.');
+                    throw new Error('Check your file format and try again later, if you continue receiving this message - contact an administrator.');
                 } else {
                     throw new Error('An unexpected error occurred. Status code: ' + response.status);
                 }
